syntax = "proto3";

package VendingMachine.Service;

// The greeting service definition.
service VendingMachine {
	// Sends a greeting
	rpc VendItem (VendRequest) returns (VendResponse) {}
}

// The request message containing the user's name.
message VendRequest {
	string item = 1;
	int32 quantity = 2;
}

// The response message containing the greetings
message VendResponse {
	int32 quantity = 1;
}